-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b96
Static fields of well known JVMCI classes have accessors declared in jvmciJavaClasses.hpp. These accessors do not perform any class initialization checks and so the classes must be initialized during JVMCI initialization.
- duplicates
-
JDK-8143164 compiler.jvmci.errors.TestInvalidDebugInfo failed: Class not yet linked: Value
-
- Closed
-