8142511: must eagerly initialize classes with static fields accessed by JVMCI native code